@@ -59,7 +59,7 @@
       this.input   = $(input);
       this.context = Fuse.Function.bind(window.eval, window);
       this.registerCallbacks();
-      document.title = 'FuseJS: Interpreter (' + Fuse.Version + ')';
+      document.title = 'FuseJS: Interpreter (' + Fuse.version + ')';
       Field.activate(this.input);
     },
 
